--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 	  "gm": "~1.16.0",
 	  "mime": "~1.2.11",
 	  "pagedown": "*",
-      "marked": "*"
+      "marked": "*",
+	  "bluebird": "~2.1.3"
   }
 }
