--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "pagedown": "*",
     "marked": "*",
     "bluebird": "~2.1.3",
-    "async": "~0.9.0"
+    "async": "~0.9.0",
+    "jsDAV": "~0.3.2"
   }
 }
