--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "marked": "*",
     "bluebird": "~2.1.3",
     "async": "~0.9.0",
-    "jsDAV": "~0.3.2"
+    "jsDAV": "~0.3.2",
+    "merge": "~1.1.3"
   }
 }
