--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "bluebird": "~2.1.3",
     "async": "~0.9.0",
     "jsDAV": "~0.3.2",
-    "merge": "~1.1.3"
+    "merge": "~1.1.3",
+    "httpsync": "0.0.8"
   }
 }
