--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "async": "~0.9.0",
     "jsDAV": "~0.3.2",
     "merge": "~1.1.3",
-    "httpsync": "0.0.8"
+    "httpsync": "0.0.8",
+    "passport": "~0.2.0",
+    "passport-google": "~0.3.0"
   }
 }
