--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "merge": "~1.1.3",
     "httpsync": "0.0.8",
     "passport": "~0.2.0",
-    "passport-google": "~0.3.0"
+    "passport-google": "~0.3.0",
+    "content-type": "0.0.1"
   }
 }
