--- a/public/bower.json
+++ b/public/bower.json
@@ -15,6 +15,8 @@
     "tests"
   ],
   "dependencies": {
-    "polymer": "Polymer/polymer#~0.3.2"
+    "polymer": "Polymer/polymer#~0.3.2",
+    "core-overlay": "Polymer/core-overlay#~0.3.4",
+    "core-transition": "Polymer/core-transition#~0.3.4"
   }
 }
