--- a/public/bower.json
+++ b/public/bower.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "polymer": "Polymer/polymer#~0.3.2",
     "core-overlay": "Polymer/core-overlay#~0.3.4",
-    "core-transition": "Polymer/core-transition#~0.3.4"
+    "core-transition": "Polymer/core-transition#~0.3.4",
+    "core-toolbar": "Polymer/core-toolbar#~0.3.4"
   }
 }
