--- a/package.json
+++ b/package.json
@@ -7,23 +7,23 @@
     "start": "node ./app.js"
   },
   "dependencies": {
-    "express": "~3.5.0",
-    "jade": "*",
-    "mongodb": "*",
-    "multiparty": "*",
-    "monk": "*",
-    "gm": "~1.16.0",
-    "mime": "~1.2.11",
-    "pagedown": "*",
-    "marked": "*",
-    "bluebird": "~2.1.3",
     "async": "~0.9.0",
+    "bluebird": "~2.1.3",
+    "content-type": "0.0.1",
+    "express": "~3.5.0",
+    "gm": "~1.16.0",
+    "jade": "*",
     "jsDAV": "~0.3.2",
+    "marked": "*",
     "merge": "~1.1.3",
-    "httpsync": "0.0.8",
+    "mime": "~1.2.11",
+    "mongodb": "*",
+    "monk": "*",
+    "multiparty": "*",
+    "pagedown": "*",
     "passport": "~0.2.0",
     "passport-google": "~0.3.0",
-    "content-type": "0.0.1"
+    "streamifier": "^0.1.0"
   },
   "subdomain": "markedcms",
   "engines": {
