--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "application-name",
-  "version": "0.0.1",
+  "name": "markedcms",
+  "version": "0.0.1-11",
   "private": true,
   "main": "app.js",
   "scripts": {
