--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "async": "~0.9.0",
     "bluebird": "~2.1.3",
+    "bower": "~1.3.8",
     "content-type": "0.0.1",
     "express": "~3.5.0",
     "jade": "*",
@@ -18,13 +19,13 @@
     "merge": "~1.1.3",
     "mime": "~1.2.11",
     "mongodb": "*",
+    "mongojs": "^0.13.1",
     "monk": "*",
     "multiparty": "*",
     "pagedown": "*",
     "passport": "~0.2.0",
     "passport-google": "~0.3.0",
-    "streamifier": "^0.1.0",
-    "bower": "~1.3.8"
+    "streamifier": "^0.1.0"
   },
   "subdomain": "markedcms",
   "engines": {
