--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "async": "~0.9.0",
+    "asyncjs": "~0.0.8",
     "bluebird": "~2.1.3",
     "bower": "~1.3.8",
     "content-type": "0.0.1",
